feat: .gitignore update and addition of untracked ActivityInstance management files

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,9 @@
 //
 
 *.xconfig
-**/*.xcuserdata/
+*.xcuserdatad
+*.xcscmblueprint
+*.xccheckout
+
+# xcuserdata folders (all workspaces & projects)
+**/xcuserdata/
