--- a/HDMV/Info.plist
+++ b/HDMV/Info.plist
@@ -43,5 +43,18 @@
 </array>
 <key>UIFileSharingEnabled</key>
 <true/>
+<key>UTExportedTypeDeclarations</key>
+<array>
+    <dict>
+        <key>UTTypeDescription</key>
+        <string>Draggable Activity Instance ID</string>
+        <key>UTTypeIdentifier</key>
+        <string>name.demael.hdmv.draggableactivityinstanceid</string>
+        <key>UTTypeConformsTo</key>
+        <array>
+            <string>public.data</string>
+        </array>
+    </dict>
+</array>
 </dict>
 </plist>
