feat: Reviewed Relationships and resolveRelationships() functions, adding inverse for conformance and .nullify trigger feat: Added LinkedModel protocols representing the linkedmodels to have setModel(model, fallbackRid) in the apply() of editors fix: Set some catalogue models slug/name to be String instead of String?

--- a/HDMV/Info.plist
+++ b/HDMV/Info.plist
@@ -19,42 +19,31 @@
 	<string>$(SUPABASE_URL)</string>
 	<key>SUPABASE_ANON_KEY</key>
 	<string>$(SUPABASE_ANON_KEY)</string>
-<key>UTImportedTypeDeclarations</key>
-<array>
-    <dict>
-        <key>UTTypeIdentifier</key>
-        <string>com.topografix.gpx</string>
-        <key>UTTypeDescription</key>
-        <string>GPS Exchange Format</string>
-        <key>UTTypeConformsTo</key>
-        <array>
-            <string>public.xml</string>
-        </array>
-        <key>UTTypeTagSpecification</key>
-        <dict>
-            <key>public.filename-extension</key>
-            <array>
-                <string>gpx</string>
-            </array>
-            <key>public.mime-type</key>
-            <string>application/gpx+xml</string>
-        </dict>
-    </dict>
-</array>
-<key>UIFileSharingEnabled</key>
-<true/>
-<key>UTExportedTypeDeclarations</key>
-<array>
-    <dict>
-        <key>UTTypeDescription</key>
-        <string>Draggable Activity Instance ID</string>
-        <key>UTTypeIdentifier</key>
-        <string>name.demael.hdmv.draggableactivityinstanceid</string>
-        <key>UTTypeConformsTo</key>
-        <array>
-            <string>public.data</string>
-        </array>
-    </dict>
-</array>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeIdentifier</key>
+			<string>com.topografix.gpx</string>
+			<key>UTTypeDescription</key>
+			<string>GPS Exchange Format</string>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.xml</string>
+			</array>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>gpx</string>
+				</array>
+				<key>public.mime-type</key>
+				<string>application/gpx+xml</string>
+			</dict>
+		</dict>
+	</array>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>UTExportedTypeDeclarations</key>
+	<array/>
 </dict>
 </plist>
